--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "typescript": "~3.6.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.8.0",
+    "@aws-cdk/aws-ec2": "^1.8.0",
+    "@aws-cdk/aws-lambda": "^1.8.0",
     "@aws-cdk/core": "^1.8.0",
     "source-map-support": "^0.5.9"
   }
