--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.8.0",
-    "@types/jest": "^24.0.18",
+    "@aws-cdk/assert": "^1.13.1",
+    "@types/jest": "^24.0.19",
+    "@types/node": "^12.11.1",
+    "aws-cdk": "^1.13.1",
     "jest": "^24.9.0",
     "ts-jest": "^24.0.2",
-    "aws-cdk": "^1.8.0",
     "ts-node": "^8.1.0",
-    "typescript": "~3.6.2"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.8.0",
-    "@aws-cdk/aws-ec2": "^1.8.0",
-    "@aws-cdk/aws-lambda": "^1.8.0",
-    "@aws-cdk/core": "^1.8.0",
+    "@aws-cdk/aws-apigateway": "^1.13.1",
+    "@aws-cdk/aws-ec2": "^1.13.1",
+    "@aws-cdk/aws-lambda": "^1.13.1",
+    "@aws-cdk/core": "^1.13.1",
     "source-map-support": "^0.5.9"
   }
 }
