--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.27.0",
-    "@types/jest": "^25.1.3",
-    "@types/node": "^13.7.7",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.1",
     "aws-cdk": "^1.27.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
@@ -25,6 +25,7 @@
     "@aws-cdk/aws-ec2": "^1.27.0",
     "@aws-cdk/aws-lambda": "^1.27.0",
     "@aws-cdk/core": "^1.27.0",
+    "npm-check-updates": "^4.0.4",
     "source-map-support": "^0.5.16"
   }
 }
