--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "bin": {
     "hello-world-lambda": "bin/hello-world-lambda.js"
   },
+  "author": {
+    "name": "Stefan Freitag",
+    "email": "stefan@stefreitag.de"
+  },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -12,9 +16,12 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.56.0",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@types/jest": "26.0.8",
     "@types/node": "14.0.14",
     "aws-cdk": "1.56.0",
+    "husky": "^4.2.5",
     "jest": "26.2.2",
     "ts-jest": "26.1.4",
     "ts-node": "8.10.2",
@@ -25,7 +32,6 @@
     "@aws-cdk/aws-ec2": "1.56.0",
     "@aws-cdk/aws-lambda": "1.56.0",
     "@aws-cdk/core": "1.56.0",
-    "npm-check-updates": "7.0.2",
     "source-map-support": "0.5.19"
   }
 }
