--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@ updates:
     versioning-strategy: lockfile-only
     directory: /
     schedule:
-      interval: daily
+      interval: monthly
     ignore:
       - dependency-name: projen
