--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "aws-cdk": "1.69.0",
+    "aws-cdk": "1.70.0",
     "eslint": "^7.11.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -50,14 +50,19 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "@aws-cdk/assert": "1.69.0",
-    "@aws-cdk/aws-apigateway": "1.69.0",
-    "@aws-cdk/aws-ec2": "1.69.0",
-    "@aws-cdk/aws-lambda": "1.69.0",
-    "@aws-cdk/core": "1.69.0"
+    "@aws-cdk/assert": "1.70.0",
+    "@aws-cdk/aws-apigateway": "1.70.0",
+    "@aws-cdk/aws-ec2": "1.70.0",
+    "@aws-cdk/aws-lambda": "1.70.0",
+    "@aws-cdk/core": "1.70.0"
   },
   "bundledDependencies": [],
-  "keywords": [],
+  "keywords": [
+    "apigateway",
+    "aws",
+    "cdk",
+    "lambda"
+  ],
   "license": "Apache-2.0",
   "start": {
     "start": {
