--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,6 @@
 .nyc_output
 .parcel-cache/
 .yarn-integrity
-/.changelog.tmp.md
-/.version.tmp.json
 /coverage
 /dist
 /lib
@@ -36,15 +34,14 @@ yarn-error.log
 yarn-error.log*
 !/.eslintrc.json
 !/.gitattributes
-!/.github/dependabot.yml
 !/.github/pull_request_template.md
 !/.github/workflows/build.yml
+!/.github/workflows/upgrade-dependencies.yml
 !/.mergify.yml
 !/.npmignore
 !/.projen/deps.json
 !/.projen/tasks.json
 !/.projenrc.js
-!/.versionrc.json
 !/LICENSE
 !/cdk.json
 !/package.json
