--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   },
   "scripts": {
     "clobber": "npx projen clobber",
-    "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
     "test": "npx projen test",
     "build": "npx projen build",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "projen:upgrade": "npx projen projen:upgrade",
+    "upgrade-dependencies": "npx projen upgrade-dependencies",
+    "upgrade-projen": "npx projen upgrade-projen",
     "default": "npx projen default",
     "eslint": "npx projen eslint",
     "synth": "npx projen synth",
@@ -35,7 +34,7 @@
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "aws-cdk": "1.101.0",
+    "aws-cdk": "1.107.0",
     "eslint": "^7.11.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -43,18 +42,18 @@
     "jest": "^26.4.2",
     "jest-junit": "^12",
     "json-schema": "^0.2.5",
-    "projen": "^0.17.73",
-    "standard-version": "^9",
+    "npm-check-updates": "^11",
+    "projen": "^0.22.8",
     "ts-jest": "^26.1.0",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9",
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "@aws-cdk/assert": "1.101.0",
-    "@aws-cdk/aws-apigateway": "1.101.0",
-    "@aws-cdk/aws-ec2": "1.101.0",
-    "@aws-cdk/aws-lambda": "1.101.0",
-    "@aws-cdk/core": "1.101.0"
+    "@aws-cdk/assert": "1.107.0",
+    "@aws-cdk/aws-apigateway": "1.107.0",
+    "@aws-cdk/aws-ec2": "1.107.0",
+    "@aws-cdk/aws-lambda": "1.107.0",
+    "@aws-cdk/core": "1.107.0"
   },
   "bundledDependencies": [],
   "keywords": [
