--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npx projen build",
     "test:watch": "npx projen test:watch",
     "test:update": "npx projen test:update",
-    "upgrade-dependencies": "npx projen upgrade-dependencies",
+    "upgrade": "npx projen upgrade",
     "upgrade-projen": "npx projen upgrade-projen",
     "default": "npx projen default",
     "eslint": "npx projen eslint",
@@ -21,12 +21,11 @@
     "deploy": "npx projen deploy",
     "destroy": "npx projen destroy",
     "diff": "npx projen diff",
-    "projen": "npx projen",
-    "start": "npx projen start"
+    "projen": "npx projen"
   },
   "author": {
     "name": "Stefan Freitag",
-    "email": "stefan@stefreitag.de",
+    "email": "stefan.freitag@udo.edu",
     "organization": false
   },
   "devDependencies": {
@@ -34,7 +33,7 @@
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
-    "aws-cdk": "1.110.1",
+    "aws-cdk": "1.122.0",
     "eslint": "^7.28.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-import-resolver-typescript": "^2.4.0",
@@ -43,17 +42,17 @@
     "jest-junit": "^12",
     "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
-    "projen": "^0.22.15",
+    "projen": "^0.27.51",
     "ts-jest": "^26.5.6",
     "ts-node": "^9",
     "typescript": "^3.9.9"
   },
   "dependencies": {
-    "@aws-cdk/assert": "1.110.1",
-    "@aws-cdk/aws-apigateway": "1.110.1",
-    "@aws-cdk/aws-ec2": "1.110.1",
-    "@aws-cdk/aws-lambda": "1.110.1",
-    "@aws-cdk/core": "1.110.1"
+    "@aws-cdk/assert": "1.122.0",
+    "@aws-cdk/aws-apigateway": "1.122.0",
+    "@aws-cdk/aws-ec2": "1.122.0",
+    "@aws-cdk/aws-lambda": "1.122.0",
+    "@aws-cdk/core": "1.122.0"
   },
   "bundledDependencies": [],
   "keywords": [
