--- a/package.json
+++ b/package.json
@@ -6,21 +6,26 @@
     "url": "https://github.com/stefanfreitag/helloWorldLambda.git"
   },
   "scripts": {
+    "build": "npx projen build",
+    "bundle": "npx projen bundle",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
-    "test": "npx projen test",
-    "build": "npx projen build",
-    "test:watch": "npx projen test:watch",
-    "test:update": "npx projen test:update",
-    "upgrade": "npx projen upgrade",
-    "upgrade-projen": "npx projen upgrade-projen",
     "default": "npx projen default",
-    "eslint": "npx projen eslint",
-    "synth": "npx projen synth",
     "deploy": "npx projen deploy",
     "destroy": "npx projen destroy",
     "diff": "npx projen diff",
+    "eject": "npx projen eject",
+    "eslint": "npx projen eslint",
+    "package": "npx projen package",
+    "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
+    "pre-compile": "npx projen pre-compile",
+    "synth": "npx projen synth",
+    "synth:silent": "npx projen synth:silent",
+    "test": "npx projen test",
+    "test:watch": "npx projen test:watch",
+    "upgrade": "npx projen upgrade",
+    "watch": "npx projen watch",
     "projen": "npx projen"
   },
   "author": {
@@ -30,31 +35,28 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
-    "@types/node": "^10.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "aws-cdk": "1.122.0",
-    "eslint": "^7.32.0",
+    "@types/node": "^14",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk": "2.55.0",
+    "esbuild": "^0.16.8",
+    "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "jest": "^26.6.3",
-    "jest-junit": "^12",
+    "jest-junit": "^13",
     "json-schema": "^0.4.0",
-    "npm-check-updates": "^11",
-    "projen": "^0.27.51",
+    "npm-check-updates": "^16",
+    "projen": "^0.65.64",
     "ts-jest": "^26.5.6",
     "ts-node": "^9",
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@aws-cdk/assert": "1.122.0",
-    "@aws-cdk/aws-apigateway": "1.122.0",
-    "@aws-cdk/aws-ec2": "1.122.0",
-    "@aws-cdk/aws-lambda": "1.122.0",
-    "@aws-cdk/core": "1.122.0"
+    "aws-cdk-lib": "2.55.0",
+    "constructs": "^10.0.5"
   },
-  "bundledDependencies": [],
   "keywords": [
     "apigateway",
     "aws",
@@ -65,8 +67,8 @@
   "version": "0.0.0",
   "jest": {
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -74,6 +76,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
@@ -98,7 +101,7 @@
     "preset": "ts-jest",
     "globals": {
       "ts-jest": {
-        "tsconfig": "tsconfig.jest.json"
+        "tsconfig": "tsconfig.dev.json"
       }
     }
   },
