--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
-    "aws-cdk": "2.56.0",
-    "esbuild": "^0.19.2",
+    "aws-cdk": "2.96.1",
+    "esbuild": "^0.19.3",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -47,13 +47,13 @@
     "jest": "^26.6.3",
     "jest-junit": "^15",
     "npm-check-updates": "^16",
-    "projen": "^0.73.15",
+    "projen": "^0.73.21",
     "ts-jest": "^26.5.6",
     "ts-node": "^9",
-    "typescript": "^3.9.10"
+    "typescript": "4.3.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.56.0",
+    "aws-cdk-lib": "2.96.1",
     "constructs": "^10.0.5"
   },
   "keywords": [
